<resources>
    <string name="app_name">Todo Application</string>
    <string name="welcome">Welcome back you’ve been missed!</string>
    <string name="google_cloud_server_client_id" translatable="false"></string>
    <string name="remember_your_todo">Fingertips To-do list</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="google">Continue with Google </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem">Create\ndummy\ncontent\ndynamically</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
</resources>